# blend

./: .editorconfig  .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  app.config.ts  biome.jsonc  build.rs  bun.lockb  jest.config.cjs  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.ts  tsconfig.json  tsconfig.node.json
.config/: default.toml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
.sqlx/: query-14f422398a6bab143a4b7204e1f5341f965207e340dd30721078f24cf0cd396d.json  query-14ffb21f2a2d6a5f70a6a28f01eda42bbbdb5fb3c83ce9f08b7434f4c892b78b.json
bindings/: Entry.ts  Feed.ts
crates/blend-cli/: Cargo.toml
crates/blend-cli/src/: error.rs  lib.rs
crates/blend-config/: Cargo.toml
crates/blend-config/src/: config.rs  error.rs  lib.rs
crates/blend-config/stubs/: default.toml
crates/blend-context/: Cargo.toml
crates/blend-context/src/: lib.rs
crates/blend-crypto/: Cargo.toml
crates/blend-crypto/src/: error.rs  jwt.rs  lib.rs  password.rs
crates/blend-db/: Cargo.toml
crates/blend-db/migrations/: 20240422000000_feeds.sql  20240422224146_feeds.sql  20240430000000_entries.sql  20240504000000_feeds_stats.sql  20240604000000_folders.sql
crates/blend-db/src/: client.rs  error.rs  lib.rs
crates/blend-db/src/model/: entry.rs  feed.rs  folder.rs  mod.rs
crates/blend-db/src/repo/: entry.rs  feed.rs  folder.rs  mod.rs
crates/blend-entity/: Cargo.toml
crates/blend-entity/src/: feed.rs
crates/blend-feed/: Cargo.toml
crates/blend-feed/src/: error.rs  lib.rs  model.rs  parse.rs  scrape.rs  util.rs
crates/blend-feed/src/extract/: html.rs  mod.rs  stylistic.rs  text.rs
crates/blend-feed/src/parse/: entry.rs  feed.rs  mod.rs  url.rs
crates/blend-feed/src/readability/: LICENSE  dom.rs  extract.rs  mod.rs  score.rs
crates/blend-feed/src/sanitize/: html.rs  mod.rs  stylistic.rs  text.rs
crates/blend-feed/src/util/: likely_html.rs  mod.rs
crates/blend-parse/: Cargo.toml
crates/blend-parse/src/: error.rs  lib.rs
crates/blend-web/: Cargo.toml
crates/blend-web/src/: context.rs  error.rs  lib.rs  response.rs
crates/blend-web/src/crypto/: error.rs  jwt.rs  mod.rs  password.rs
crates/blend-web/src/middleware/: auth.rs  cache.rs  guest.rs  mod.rs
crates/blend-web/src/router/: entry.rs  feed.rs  folder.rs  mod.rs  ui.rs  user.rs  ws.rs
crates/blend-web/src/util/: cookie.rs  mod.rs
crates/blend-worker/: Cargo.toml
crates/blend-worker/src/: error.rs  handler.rs  job.rs  lib.rs  notification.rs  worker.rs
src/: args.rs  error.rs  main.rs  model.rs
ui/: app.css  app.tsx  entry-server.tsx  index.html  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1714779437584-8ce694564ecfa.mjs
ui/components/: demo.tsx  link.tsx
ui/contexts/: feed.ts
ui/layouts/: base.tsx
ui/routes/: [...404].tsx  article.tsx  index.tsx  new.tsx
ui/src/: app.tsx  article.json  index.tsx  router.tsx
ui/src/api/: entries.ts  feeds.ts  folders.ts  index.ts
ui/src/components/: demo.tsx  entry.tsx  feed-item.tsx  header.tsx  link.tsx  logo.tsx  nav.tsx  sidebar.tsx
ui/src/components/entry/: entry-actions.tsx  entry-item.tsx  entry-list.tsx  entry-panel.tsx  entry-view.tsx  entry.tsx
ui/src/components/feed/: entry-list.tsx  entry-panel.tsx  feed-context-button.tsx  feed-empty-item.tsx  feed-folder.tsx  feed-header.tsx  feed-info-folder.tsx  feed-info.tsx  feed-item.tsx  feed-list.tsx  feed-menu.tsx  feed-panel.tsx
ui/src/components/form/: button.tsx
ui/src/components/layout/: action-button.tsx  context-button.tsx  feed-item.tsx  header.tsx  logo.tsx  nav.tsx  panel.tsx  sidebar.tsx
ui/src/components/menus/: context-menu.tsx  feed-menu.tsx  feeds-menu.tsx  menu-app.tsx  menu-feed.tsx  menu-feeds.tsx  menu-settings.tsx  menu.tsx  settings-menu.tsx
ui/src/components/modals/: create-feed-modal.tsx  create-feed.tsx  create-folder.tsx  modal.tsx  move-feed.tsx
ui/src/components/nav/: nav-panel.tsx  nav-row.tsx  nav-view-switcher.tsx  nav-view-tabs.tsx
ui/src/components/panels/: entry-panel.tsx  list-panel.tsx  sidebar-panel.tsx
ui/src/components/ui/: button.tsx  context-button.tsx  empty.tsx  folder.tsx  input.tsx  link.tsx  logo.tsx  menu.tsx  skeleton.tsx  spinner.tsx  tabs.tsx  tooltip.tsx
ui/src/components/ui/button/: action-button.tsx  icon-button.tsx  index.tsx
ui/src/components/ui/empty/: index.tsx  styles.module.css
ui/src/components/ui/layout/: panel.tsx  sidebar.tsx
ui/src/constants/: attributes.ts  elements.ts  query.ts  tabs.ts  views.ts
ui/src/constants/ui/: button.ts  feed.ts  input.ts  menu.ts  tooltip.ts
ui/src/contexts/: entries-context.ts  feed.ts  notification-context.ts  notifications-context.ts  query-state-context.ts  viewport-context.ts
ui/src/css/: app.css
ui/src/hooks/: connectWs.ts  use-filter-params.ts  use-filter.ts  use-infinite-entries.ts  use-list-nav.ts  use-notifications.ts  use-query-state.ts  use-shortcuts.ts  use-viewport.ts  use-ws.ts  useFeeds.tsx
ui/src/hooks/queries/: use-entry-read.ts  use-entry-saved.ts  use-entry.ts  use-feed-read.ts  use-feeds-stats.ts  use-feeds.ts  use-folders.ts  use-grouped-feeds.ts  use-infinite-entries.ts  use-invalidate-entry.ts  use-invalidate-feed.ts  use-invalidate-folders.ts  use-invalidate-stats.ts  use-refresh-feed.ts  use-refresh-feeds.ts
ui/src/layouts/: base.tsx
ui/src/pages/: 404.tsx  article.tsx  feed.tsx  index.tsx  new.tsx
ui/src/routes/: 404.tsx  feed.tsx  test.tsx
ui/src/stores/: modal.ts
ui/src/styles/: app.css
ui/src/types/: bindings.ts
ui/src/types/bindings/: entry.ts  feed.ts  notification.ts  stats.ts
ui/src/utils/: api.ts  date.ts  entries.test.ts  entries.ts  format.ts  query.ts  stats.ts  tw.ts  url.ts
ui/src/utils/entries/: getEntryComparator.test.ts  index.ts
