[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Zak Nesler"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4"
feed-rs = "1.4"
rust-embed = "8.3"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.7"
thiserror = "1.0"
tokio = "1.37"
tracing = "0.1"

[package]
name = "blend"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blend-config = { path = "./crates/blend-config" }
blend-context = { path = "./crates/blend-context" }
blend-db = { path = "./crates/blend-db" }
blend-web = { path = "./crates/blend-web" }
clap = { version = "4.4", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["serde"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.cross.build.env]
passthrough = ["DATABASE_URL", "BLEND_HOME"]
