[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Zak Nesler"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4"
feed-rs = "1.4"
reqwest = "0.12"
rust-embed = "8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }

[package]
name = "blend"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blend-config = { path = "./crates/blend-config" }
blend-db = { path = "./crates/blend-db" }
blend-feed = { path = "./crates/blend-feed" }
blend-web = { path = "./crates/blend-web" }
blend-worker = { path = "./crates/blend-worker" }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["serde"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.cross.build.env]
passthrough = ["DATABASE_URL", "BLEND_HOME"]
