[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["Zak Nesler"]
repository = "https://github.com/zaknesler/blend"
license = "MIT"
description = "Self-hosted RSS reader made with Rust + Solid.js, packaged nicely in a single binary."

[workspace]
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4"
feed-rs = "2.2"
futures = "0.3"
reqwest = "0.12"
rust-embed = "8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
typeshare = "1.0"
url = "2.5"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }

[package]
name = "blend"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blend-config = { path = "./crates/blend-config" }
blend-db = { path = "./crates/blend-db" }
blend-feed = { path = "./crates/blend-feed" }
blend-web = { path = "./crates/blend-web" }
blend-worker = { path = "./crates/blend-worker" }
clap = { version = "4.4", features = ["derive"] }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["serde"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.cross.build.env]
passthrough = ["DATABASE_URL", "BLEND_HOME"]
