[package]
name = "blend-cli"
version.workspace = true
edition.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
blend-web = { path = "../blend-web" }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0", features = ["serde"] }
