[package]
name = "blend-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
directories = "5.0"
figment = { version = "0.10", features = ["env", "toml"] }
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
