[package]
name = "blend-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
argon2 = { version = "0.5", features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
hmac = "0.12"
jwt = "0.16"
sha2 = "0.10"
thiserror = { workspace = true }
