[package]
name = "blend-db"
version.workspace = true
edition.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
blend-context = { path = "../blend-context" }
chrono = { workspace = true, features = ["serde"] }
futures = "0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { version = "8", features = ["chrono-impl"] }
