[package]
name = "blend-db"
version.workspace = true
edition.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
chrono = { workspace = true, features = ["serde"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["migrate", "uuid"] }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
