[package]
name = "blend-entity"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
feed-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { version = "8", features = ["chrono-impl"] }
