[package]
name = "blend-feed"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.0"
chrono = { workspace = true, features = ["serde"] }
feed-rs = { workspace = true }
html5ever = "0.27"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
