[package]
name = "blend-feed"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.0"
article_scraper = "2.1"
chrono = { workspace = true, features = ["serde"] }
feed-rs = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2.5"
