[package]
name = "blend-feed"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.0"
chrono = { workspace = true, features = ["serde"] }
feed-rs = { workspace = true }
futures = { workspace = true }
html5ever = "0.27"
lazy_static = "1.4"
markup5ever_rcdom = "0.3"
regex = "1.9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2.5"
