[package]
name = "blend-parse"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
feed-rs = { workspace = true }
reqwest = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
