[package]
name = "blend-web"
version.workspace = true
edition.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
blend-crypto = { path = "../blend-crypto" }
blend-feed = { path = "../blend-feed" }
blend-db = { path = "../blend-db" }
blend-worker = { path = "../blend-worker" }
axum = { version = "0.7", features = ["ws"] }
axum-embed = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = [
  "trace",
  "cors",
  "fs",
  "compression-br",
] }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
