[package]
name = "blend-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
blend-feed = { path = "../blend-feed" }
blend-db = { path = "../blend-db" }
blend-worker = { path = "../blend-worker" }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["ws"] }
axum-embed = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
hmac = "0.12"
jwt = "0.16"
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true, features = ["chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-cookies = "0.10"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "fs",
  "compression-br",
] }
tracing = { workspace = true }
typeshare = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.19", features = ["derive"] }
