[package]
name = "blend-worker"
version.workspace = true
edition.workspace = true

[dependencies]
blend-config = { path = "../blend-config" }
blend-db = { path = "../blend-db" }
blend-feed = { path = "../blend-feed" }
base64 = "0.22"
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
favilib = "0.5"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
